content/v6.x/ru-RU/doc/STYLE_GUIDE.md
# Руководство по стилю

* Документация, написанная в markdown файлах с названиями, отформатированными как `строчные буквы-с-тире.md`. 
  * Подчеркивания в названии файла допускается только, когда они присутствуют в теме, о которой пойдет речь в документе (например, `child_process`).
  * Некоторые файлы, такие как markdown файлы высокого уровня, являются исключением.
* Переход на новую строку в документах ограничена 80 символами.
* Форматирование, описанное в `.editorconfig`, является предпочтительным. 
  * [plugin](http://editorconfig.org/#download) доступен для некоторых редакторов, чтобы автоматически применять эти правила.
* Механические проблемы, такие как орфография и грамматика, должны определяться инструментами (tools), насколько это возможно. Если не обнаружены с помощью инструмента, они должны быть отмечены рецензентами.
* Предпочтительна американская орфография английского языка. "Capitalize" против "Capitalise", "color" против "colour", и т. д.
* Хотя спорная, [Oxford comma](https://en.wikipedia.org/wiki/Serial_comma) предпочтительна для ясности.
* Избегайте личных местоимений в справочной документации ("я", "вы", "мы"). 
  * Местоимения допустимы в более нелитературной документации, такой как руководства.
  * Используйте гендерно-нейтральные местоимения и имена нарицательные. Некоторые примеры: 
    * ПРАВИЛЬНО: "они", "их", "им", "народ", "люди", "разработчики", "кошки"
    * НЕПРАВИЛЬНО: "его", "её", "ему", "ей", "ребята", "чуваки"
* При сочетании парных знаков препинания (скобки и кавычки), завершающий знак препинания должен располагаться: 
  * Внутри парных знаков препинания, если заключенные внутри элементы составляют полное предложение - подлежащее, сказуемое и определение.
  * Вне парных знаков препинания, если внутри заключена только часть предложения.
* Знак, завершающий предложение, помещайте внутри парных знаков препинания - точка ставится внутри скобок и кавычек, не после.
* Документы должны начинаться с заголовка первого уровня. Пример документа будет прикреплен здесь в конечном итоге.
* Предпочтительно прикреплять ссылки, а не встраивать - предпочтение `[a link][]` к `[a link](http://example.com)`.
* При документировании API, обратите внимание, когда была предоставлена версия API в конце раздела. Если API устарел, обратите также внимание на первую версию, в которой устаревший API появился.
* При использовании тире, используйте [Em dashes](https://en.wikipedia.org/wiki/Dash#Em_dash) ("—" или `Option+Shift+"-"` на macOS), окруженный пробелами, согласно с [The New York Times Manual of Style and Usage](https://en.wikipedia.org/wiki/The_New_York_Times_Manual_of_Style_and_Usage).
* Включая активы: 
  * Если вы хотите добавить иллюстрацию или целую программу, добавьте ее к соответствующему подкаталогу в `assets/` dir.
  * Ссылка на это так: `[Asset](/assets/{subdir}/{filename})` для файловых активов, и `![Asset](/assets/{subdir}/{filename})` для активов образов.
  * Для иллюстраций предпочтительней SVG другим активам. Когда невозможно применить SVG, пожалуйста, внимательно следите за размером файла актива, который вы вставляете.
* Для блоков кода: 
  * Используйте языковые барьеры. ("```js")
  * Код не должен быть полным - рассмотрите блоки кода как иллюстрацию или помощь для вашей точки, а не как полные запущенные программы. Если нужна полная работающая программа, включите ее как актив `assets/code-examples` и сделайте ссылку на него.
* При использовании символов нижнего подчеркивания, звездочки и обратных кавычек, пожалуйста, используйте правильные выделения (`\_`, `\*` и `` \` `` вместо `_`, `*` и `` ` ``).
* Ссылки на функции разработчика должны использовать PascalCase.
* Ссылки на экземпляры разработчика должны использовать PascalCase.
* Ссылки на методы должны быть с использованием скобок: например, `socket.end()` вместо `socket.end`.
* Параметры функций и свойства объекта должны использовать следующий формат: 
  * `* \<code>name` {type|type2} Дополнительное описание. **Default:** `defaultValue`</code>
  * Например, `* <code>byteOffset` {integer} Индекс первого байта для отображения. **Default:** `0`</code>
  * `тип` должен ссылаться на тип Node.js или [тип JavaScript](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Grammar_and_types#Data_structures_and_types)
* Функция обратной связи должна иметь следующий формат: 
  * `* Возврат: {type|type2} Дополнительное описание.`
  * Например, `* Возврат: {AsyncHook} Ссылка на <code>asyncHook`.</code>